<resources>
    <string name="app_name">API REST FREE</string>
    <string name="title_app_name">Nutrition App</string>
    <string name="txt_no_info">No hay resultados.</string>
    <string name="default_city">Default City</string>
    <string name="menu_settings">Settings</string>
    <string name="food_name">Food name</string>
    <string name="calories">Calories</string>
    <string name="serving_size">Serving Size</string>
    <string name="total_fat">Total Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fiber">fiber</string>
    <string name="sugar">sugar</string>
    <string name="txt_favorites">Favoritos</string>
    <string name="txt_optBottom_all">Todos</string>
    <string name="txt_opt_sort">Ordenar</string>
    <string name="txt_opt_about">Acerca de</string>
    <string name="proporties">0 / 0 gr</string>
    <string name="txt_no_connexion">No hay conexión a internet</string>

</resources>