<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMainActivity"
    android:background="#F0F8FF">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/food_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_fat"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <ProgressBar
            android:id="@+id/pbTotalFat"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvTotalFatValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSaturatedFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturated_fat"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbSaturatedFat"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvSaturatedFatValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sodium"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbSodium"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvSodiumValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPotassium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potassium"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbPotassium"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvPotassiumValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCholesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cholesterol"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbCholesterol"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvCholesterolValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCarbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrates"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbCarbs"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvCarbsValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiber"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbFiber"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvFiberValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/pbSugar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/tvSugarValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proporties"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
